# claude-victor

./: .gitignore  .mcp.json  Makefile  Makefile.windows  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: plan-victor.md
.claude-plugin/hooks/: enforce-planning.sh
.claude-plugin/mcp/: memory-keeper.json
.github/workflows/: ci.yml
commands/: plan-victor.md
hooks/: hooks.json
safe-mode/: README.md  install.sh  settings.json
safe-mode/hooks/: safe-bash-validator.sh
scripts/: configure_plugin.py
src/claude_victor/: __init__.py
src/claude_victor/github/: __init__.py  actions.py  client.py  issues.py  pr.py
src/claude_victor/memory/: __init__.py  plan_store.py
src/claude_victor/workflow/: __init__.py  planning.py
tests/bdd/features/: cross_platform_setup.feature  plan_storage.feature  pr_workflow.feature
tests/bdd/steps/: plan_steps.py  pr_steps.py  setup_steps.py
tests/integration/: test_cross_platform.py  test_github_integration.py  test_memory_keeper_integration.py
tests/unit/: test_actions.py  test_github_client.py  test_issues.py  test_plan_store.py  test_pr.py
